// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSBreadcrumb 1 Item 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="#entity"
        >
          Parent Entity
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`DOM snapshots SLDSBreadcrumb 2 Items 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Two item breadcrumb"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="#entity"
          id="parent-entity"
        >
          Parent Entity
        </a>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="#record"
        >
          Parent Record Name
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`DOM snapshots SLDSBreadcrumb Base with overflow menu 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Breadcrumb with overflow menu"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click"
          id="ADFA34_-dropdown"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button_neutral slds-button_icon-bare ignore-click-ADFA34_-dropdown"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#threedots"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              More Options
            </span>
          </button>
        </div>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="#entity"
        >
          Parent Entity
        </a>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="#record"
        >
          Parent Record Name
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
